# car_sim

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  main.cpp  settings.yaml
config.tests/static_link_order/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: main.cpp  main_window.cpp  main_window.h  main_window.ui
src/common/: entities.h  geometry.cpp  geometry.h  raster_data.h  raster_map.h  roads_vector_map.h
src/main/: raster_map_builder.cpp  raster_map_builder.h  roads_map_builder.cpp  roads_map_builder.h  simulator.cpp  simulator.h  simulator_deprecated
src/map/: glmapwidget.h  map_painter.h
src/projections/: lon_lat_to_meters_projector.cpp  lon_lat_to_meters_projector.h  meters_to_image_projector.cpp  meters_to_image_projector.h
src/rasterize/: projector.cpp  projector.h  roads_extractor.cpp  roads_extractor.h  roads_map_reader.cpp  roads_map_reader.h  roads_rasterizer.cpp  roads_rasterizer.h  roads_rasterizer_deprecated.cpp  roads_rasterizer_deprecated.h  roads_rasterizer_handler.cpp  roads_rasterizer_handler.h  roads_rasterizer_segmenter.cpp  roads_rasterizer_segmenter.h  roads_rasterizer_utils.cpp  roads_rasterizer_utils.h  roads_vector_map.cpp  roads_vector_map.h
src/ui/: draw_settings.h  main_window.cpp  main_window.h  main_window.ui
src/ui/map/: camera.h  glmapwidget.cpp  glmapwidget.h  map_painter.cpp  map_painter.h
src/utils/: UTM.h  automatic_counter.h  guard_holder.h  math_utils.h  mutex_pimpl.cpp  mutex_pimpl.h  verify.h
utils/: osm2road.py
